--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,41 @@
 {
     "cSpell.words": [
-        "minmax"
+        "Architecto",
+        "Sapiente",
+        "Totam",
+        "accusantium",
+        "adipisicing",
+        "amet",
+        "beatae",
+        "consectetur",
+        "consequatur",
+        "cupiditate",
+        "ducimus",
+        "eaque",
+        "elit",
+        "expedita",
+        "fuga",
+        "illo",
+        "ipsa",
+        "ipsam",
+        "itaque",
+        "laboriosam",
+        "magni",
+        "maiores",
+        "minmax",
+        "molestiae",
+        "molestias",
+        "omnis",
+        "perspiciatis",
+        "quaerat",
+        "quas",
+        "quidem",
+        "quis",
+        "quisquam",
+        "reiciendis",
+        "repellat",
+        "temporibus",
+        "unde",
+        "veritatis"
     ]
 }
